# smart_pointer

./: .gitignore  CMakeLists.txt  Makefile  cmakelist.txt  main.cpp  myshared_ptr.cpp  myshared_ptr.h  myshared_ptr_gmock.h  mysmart_ptr.cpp  mysmart_ptr.h  mysmart_ptr_gmock.h  unique_ptr_gtest.h
cmake_implementation/: Makefile  main.py
smart_ptr/: cmakelist.txt  mysmart_ptr.cpp
